# tarefas

./: .gitignore  README.md  pyproject.toml
tarefas/: component.py  db_config.py  main.py  todo_app.py
